create github pages

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html  >
+<html  lang="ru">
 <head>
   
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/2024-12-21-14.58.39-128x124.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -82,7 +82,7 @@
 
             <div class="col-lg-5 my-auto pb-4 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="ZmyMZbNMqosZredImy5OabjJaNpv3li0yBzxv5Xh7Ub2uFwdKJz/1Iw8CIg/k/vZXTmBMcdHO/mzsINQHrMs/bHuwDCohoD08PQ2JFvsEf7BMUA/fYYdNtvu4C820Fe6.T68yNIn6bHj2Ca/b4N+6mdfED3LllHl6/OV4NvKuaku/kplrXT17dX2/TwybGM+dFx38ufwL+4+no1aNu/wpMNIKd2zkj9Bh4lm5C1iwboyeoBZgWpg7QJxf16pS1O/Y">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="NvMeYSDTLNgBw70BPM4KlWELAu97jcwxTX6NM5cfX/yAq2rhThkvmYYSkN1VQyACsEkNhbsmV6ZnWYMT5a4w9LFH6E3jQ6BzbX9/SqINj7kRyhBIe6ykDGNJsG4VXyaU.wzbtnuJB8l1sGXVmoRqRHyZemgszNPhYyX0AqkNQ62FYzqSIXDT5hGH0aVXUlBj0psEzJsNitngxTPvGgbAPzVSDDlj9D6cOPAojXNpDTC2e52NC9sgXEq6KFntU3RiN">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заявку! Ожидайте, на ватсапп отправим ссылку на оплату.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
