create github pages

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
             <div class="col-md-12 col-lg-7 m-auto">
               <div class="title">
                 <h2 class="mbr-section-title mbr-regular align-left mbr-fonts-style mbr-white display-2">🌟 Откройте секреты будущего с нумерологическим календарём 2025 года! 🌟</h2>
-                <p class="mbr-section-subtitle align-left mbr-fonts-style mbr-white block-left display-5">Вы ищете уникальный инструмент для понимания себя и своего пути? Наш нумерологический календарь по дате рождения — это именно то, что вам нужно!</p>
-                <div class="mbr-section-btn align-left"><a class="btn btn-danger display-7" href="#">Узнать подробней</a></div>
+                <p class="mbr-section-subtitle align-left mbr-fonts-style mbr-white block-left display-5">Ваш полный прогноз на 2025 год - это твой личный календарь успеха на весь год 🫶 <br><br>Свидания, покупки, новые проекты, устройство на работу , поездки, предостережения</p>
+                
               </div>
             </div>
 
             <div class="col-lg-5 my-auto pb-4 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="NvMeYSDTLNgBw70BPM4KlWELAu97jcwxTX6NM5cfX/yAq2rhThkvmYYSkN1VQyACsEkNhbsmV6ZnWYMT5a4w9LFH6E3jQ6BzbX9/SqINj7kRyhBIe6ykDGNJsG4VXyaU.wzbtnuJB8l1sGXVmoRqRHyZemgszNPhYyX0AqkNQ62FYzqSIXDT5hGH0aVXUlBj0psEzJsNitngxTPvGgbAPzVSDDlj9D6cOPAojXNpDTC2e52NC9sgXEq6KFntU3RiN">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="iB7K+GMbe1fkeinzt1DVm3IhJCd/GpTazjtXbEYJ1+S6OmkJOrsRWzwUnK/RPJLN7llmAijjiwslSZGVo7041aL/rEjzZzNLHcGOuJ+bsZB8baHe7yaG3K9eRT/smjDN.jovwsGCrifHHsY0El8wvcE74Eem5S6ArkrJLeAZiEH//gebDmOoFpHOMlTlEOZwxWKRgtrWXKGuR4344Q93nDTfn01WyETjNXPw62RvlNbYGCM7WKrCemTLCx199yl5h">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заявку! Ожидайте, на ватсапп отправим ссылку на оплату.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
