create github pages

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div class="col-lg-5 my-auto pb-4 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="iB7K+GMbe1fkeinzt1DVm3IhJCd/GpTazjtXbEYJ1+S6OmkJOrsRWzwUnK/RPJLN7llmAijjiwslSZGVo7041aL/rEjzZzNLHcGOuJ+bsZB8baHe7yaG3K9eRT/smjDN.jovwsGCrifHHsY0El8wvcE74Eem5S6ArkrJLeAZiEH//gebDmOoFpHOMlTlEOZwxWKRgtrWXKGuR4344Q93nDTfn01WyETjNXPw62RvlNbYGCM7WKrCemTLCx199yl5h">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="rteBc6V/5q6oexX66zAyLvvgc8bXci/tsN3kT1nsqdimlPWFXN+JNYMp2w2ggPyehgQfQHHWL3GRcke9P8oPhNHbsi83KfSBlM4KYOSnkJ+PVAsJo90EzLj1hmYb4o8d.cG6+vqDyj1YUvWRNr57dTc4VGyYOQTgE70G2V1uWOg8/xvhRsWfGajShrFxkojUCZpXsf1r3RRZf1iOEdEzbaUlPITMNQG5KAPiI+7JiHi2xjfCi/f8vYc3afA2e3bar">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заявку! Ожидайте, на ватсапп отправим ссылку на оплату.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -92,10 +92,11 @@
 <h5 class="mbr-fonts-style mbr-black display-5">Получите свой календарь</h5>
 </div>
 <div class="col-lg-12">
-<p class="mbr-section-subtitle mbr-section-subtitle align-center mbr-fonts-style text-form display-7">Приобретите нумерологический календарь 2025 года за 5000 500 рублей в PDF файле</p>
+<p class="mbr-section-subtitle mbr-section-subtitle align-center mbr-fonts-style text-form display-7">Приобретите нумерологический календарь 2025 года в PDF файле</p>
 </div>
-<div data-for="Дата рождения" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="date" name="Дата рождения" data-form-field="Дата рождения" required="required" class="form-control display-7" value="1986-05-07" id="Дата рождения-header3-x">
+<div data-for="text" class="col-lg-12 col-md-12 col-sm-12 form-group">
+<label for="age">Дата рождения<em>*</em></label>
+<input id="age" type="date" min="1920-01-01" max="2000-01-01"><br>
 </div>
 <div data-for="Имя" class="col-lg-12 form-group">
 <input type="text" name="Имя" placeholder="Имя" data-form-field="Имя" class="form-control display-7" required="required" value="" id="Имя-header3-x">
@@ -104,7 +105,7 @@
 <input type="text" name="Телефон" placeholder="Телефон" data-form-field="Телефон" class="form-control display-7" value="" id="Телефон-header3-x">
 </div>
 <div class="col-auto form-btn">
-<button type="submit" class="w-100 w-100 w-100 btn btn-danger link-btn display-7">Получить календарь</button>
+<button type="submit" class="w-100 w-100 w-100 w-100 btn btn-danger link-btn display-7">Получить календарь</button>
 </div>
 </div>
 </form><!--Formbuilder Form-->
