create github pages

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
             <div class="col-md-12 col-lg-7 m-auto">
               <div class="title">
                 <h2 class="mbr-section-title mbr-regular align-left mbr-fonts-style mbr-white display-2">🌟 Откройте секреты будущего с нумерологическим календарём 2025 года! 🌟</h2>
-                <p class="mbr-section-subtitle align-left mbr-fonts-style mbr-white block-left display-5">Ваш полный прогноз на 2025 год - это твой личный календарь успеха на весь год 🫶 <br><br>Свидания, покупки, новые проекты, устройство на работу , поездки, предостережения</p>
+                <p class="mbr-section-subtitle align-left mbr-fonts-style mbr-white block-left display-5">Ваш полный прогноз на 2025 год - это твой личный календарь успеха на весь год 🫶 <br><br>Свидания, покупки, новые проекты, устройство на работу, поездки, предостережения</p>
                 
               </div>
             </div>
 
             <div class="col-lg-5 my-auto pb-4 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="rteBc6V/5q6oexX66zAyLvvgc8bXci/tsN3kT1nsqdimlPWFXN+JNYMp2w2ggPyehgQfQHHWL3GRcke9P8oPhNHbsi83KfSBlM4KYOSnkJ+PVAsJo90EzLj1hmYb4o8d.cG6+vqDyj1YUvWRNr57dTc4VGyYOQTgE70G2V1uWOg8/xvhRsWfGajShrFxkojUCZpXsf1r3RRZf1iOEdEzbaUlPITMNQG5KAPiI+7JiHi2xjfCi/f8vYc3afA2e3bar">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="srzS7q29KAFhTnmleZIBeaDZcBOieNzXKNQ6IMR458lFAKbw74N9ZUe6tE2iTEAkVm39zPOTIG64Xi8a5hbPRoxabQlMeNRmF3MziO7k8RhZ0cl+Y26bTyUGjm8kzTm2.ndJ7odspPQ+XXTLlLNEHJ5oPapL1Hv1wdUDLnhpsCLAOYdaCcGoTx/e9DoELow+lvaDWSewpgKnSAtJiqB+Ts3TZI9xjKiJGbwbAeetzDNvBmADT3+cjt5gZlszC5gru">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заявку! Ожидайте, на ватсапп отправим ссылку на оплату.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -92,11 +92,10 @@
 <h5 class="mbr-fonts-style mbr-black display-5">Получите свой календарь</h5>
 </div>
 <div class="col-lg-12">
-<p class="mbr-section-subtitle mbr-section-subtitle align-center mbr-fonts-style text-form display-7">Приобретите нумерологический календарь 2025 года в PDF файле</p>
+<p class="mbr-section-subtitle mbr-section-subtitle align-center mbr-fonts-style text-form display-7">Приобретите нумерологический календарь 2025 года в PDF файле. При оплате до 4.01.2025 г. разбор в подарок.</p>
 </div>
 <div data-for="text" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<label for="age">Дата рождения<em>*</em></label>
-<input id="age" type="date" min="1920-01-01" max="2000-01-01"><br>
+<input type="text" name="day" placeholder="День" maxlength="2" size="2" id="day-header3-x" data-form-field=""><input type="text" name="month" placeholder="Месяц" maxlength="2" size="2" id="month-header3-x" data-form-field=""><input type="text" name="year" placeholder="Год" maxlength="4" size="4" id="year-header3-x" data-form-field="">
 </div>
 <div data-for="Имя" class="col-lg-12 form-group">
 <input type="text" name="Имя" placeholder="Имя" data-form-field="Имя" class="form-control display-7" required="required" value="" id="Имя-header3-x">
@@ -104,9 +103,7 @@
 <div data-for="Телефон" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <input type="text" name="Телефон" placeholder="Телефон" data-form-field="Телефон" class="form-control display-7" value="" id="Телефон-header3-x">
 </div>
-<div class="col-auto form-btn">
-<button type="submit" class="w-100 w-100 w-100 w-100 btn btn-danger link-btn display-7">Получить календарь</button>
-</div>
+<div class="col-auto form-btn"><button type="submit" class="w-100 w-100 w-100 w-100 btn btn-danger link-btn display-7">Купить за 500 руб.</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
