create github pages

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div class="col-lg-5 my-auto pb-4 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="srzS7q29KAFhTnmleZIBeaDZcBOieNzXKNQ6IMR458lFAKbw74N9ZUe6tE2iTEAkVm39zPOTIG64Xi8a5hbPRoxabQlMeNRmF3MziO7k8RhZ0cl+Y26bTyUGjm8kzTm2.ndJ7odspPQ+XXTLlLNEHJ5oPapL1Hv1wdUDLnhpsCLAOYdaCcGoTx/e9DoELow+lvaDWSewpgKnSAtJiqB+Ts3TZI9xjKiJGbwbAeetzDNvBmADT3+cjt5gZlszC5gru">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Заявка на календарь"><input type="hidden" name="email" data-form-email="true" value="b3Z0Nh2ZvZxVclog4L4nlw7jzQL+/x/r+syvb83NLBOfWWlSW8gaA2UAaWBBar3LFtTUg/Fe0oQAjMh7OlcjsTCxRgM5b5VfJOlaDrSdCyBSiZB5lV2j7Xl0PlS02lY3.EutYWOeH0NyJytpQWozpK2p/lXCZdva3x8wrG6qAB/sd6AI7CiwcSvOBbxi0qu3wCXp8LFul29cRdFD/Xt+9tFTcrM0FXoqasA267SoOn93UCu/4h+kVGmvnweZwvDUt">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заявку! Ожидайте, на ватсапп отправим ссылку на оплату.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -218,7 +218,7 @@
             <div class="modalWindow-container">
                 <div class="modalWindow-video-container">
                     <div class="modalWindow-video">
-                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.youtube.com/shorts/Eae6F2CP7os"></iframe>
+                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://youtu.be/ebofULesHvM"></iframe>
                     </div>
                     <a class="close" role="button" data-dismiss="modal">
                         <span aria-hidden="true" class="mbri-close mbr-iconfont closeModal"></span>
